Added Brand & Category services, controllers, and appropriate unit tests