@@ -2,6 +2,7 @@ package com.mythicemporium.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -9,7 +10,10 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Configuration
@@ -41,10 +45,23 @@ public class SecurityConfig {
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
         JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
         converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            Collection<String> permissions = jwt.getClaimAsStringList("permissions");
-            return permissions.stream()
-                    .map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList());
+            Collection<GrantedAuthority> authorities = new ArrayList<>();
+
+            List<String> permissions = jwt.getClaimAsStringList("permissions");
+            if (permissions != null) {
+                authorities.addAll(permissions.stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .toList());
+            }
+
+            List<String> roles = jwt.getClaimAsStringList("https://mythic-emporium.chbchan.dev/roles");
+            if (roles != null) {
+                authorities.addAll(roles.stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .toList());
+            }
+
+            return authorities;
         });
         return converter;
     }
